Purchase Order Pending and Complete on Index Page

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -122,14 +122,14 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
-                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
-                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
-                                    <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
-                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
-                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
-                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.POPendingCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.POPendingCountModels.OLastYearValue</span></a></li>
+                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.POPendingCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.POPendingCountModels.OLastMonthValue</span></a></li>
+                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POPendingCountModels.OLast7Days</span></a></li>*@
+                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.POPendingCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.POPendingCountModels.OYesterdayValue</span></a></li>
+                                    <li><a href="#">Today <span class="badge bg-green">@Model.POPendingCountModels.OToday</span><span class="pull-right badge bg-green">@Model.POPendingCountModels.OTodayValue</span></a></li>
+                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.POPendingCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.POPendingCountModels.OCMonthValue</span></a></li>
+                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.POPendingCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.POPendingCountModels.OCYearValue</span></a></li>
+                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.POPendingCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
@@ -142,13 +142,13 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
-                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
-                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
-                                    <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
-                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
-                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.POCompleteCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.POCompleteCountModels.OLastYearValue</span></a></li>
+                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.POCompleteCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.POCompleteCountModels.OLastMonthValue</span></a></li>
+                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCompleteCountModels.OLast7Days</span></a></li>*@
+                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.POCompleteCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.POCompleteCountModels.OYesterdayValue</span></a></li>
+                                    <li><a href="#">Today <span class="badge bg-green">@Model.POCompleteCountModels.OToday</span><span class="pull-right badge bg-green">@Model.POCompleteCountModels.OTodayValue</span></a></li>
+                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.POCompleteCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.POCompleteCountModels.OCMonthValue</span></a></li>
+                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.POCompleteCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.POCompleteCountModels.OCYearValue</span></a></li>
                                     @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
                                 </ul>
                             </div>
